--- a/app/src/main/res/layout/activity_c.xml
+++ b/app/src/main/res/layout/activity_c.xml
@@ -109,7 +109,7 @@
                 android:text="Open" />
 
             <Button
-                android:id="@+id/btn_send"
+                android:id="@+id/btn_mail"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginEnd="0dp"
